Async code execution via RabbitMQ & UI updates
Switch code execution to an async request-reply model and add advanced analysis fields across backend and frontend.

Key changes:
- CodeExecutionService: replaced in-process Docker sandbox flow with a request-reply publish to RabbitMQ (creates PENDING execution record, publishes ExecutionRequest, waits for ExecutionResponse). Added error handling and increased timeout.
- RabbitMQConfig: added execution queue, routing key, binding and configured RabbitTemplate with reply timeout.
- DTOs: moved CodeExecutionDTO/AnalysisContextDTO to core-libs and made execution DTOs serializable (executionId added to request/response).
- Entities & DB: added new analysis columns (concurrency, collection, graph, runtime) to Metrics entity and provided a Flyway migration V13 to add these columns; adjusted several associations to use LAZY fetching and tweaked User password JSON access.
- API adjustments: CodeAnalyzerController now returns the new advanced analysis fields; SecurityConfig reads a comma-separated app.frontend.url and sets allowed origins accordingly.
- Frontend: wired advanced analysis fields through types, services, and components (AnalysisResults shows new cards), changed API base to /api (VITE_API_URL update), added UI tweaks (Card clickable support, minor motion -> div simplifications), and updated pages to handle new props and types.
- Tests & tooling: updated feature tester endpoints to :8080 and added a Code Execution flow; docker-compose updated with FRONTEND_URL list, sandbox volume and docker socket mount.
- Added project documentation file (Ai-code-review project_overview) and troubleshooting log files.

Notes: This commit reworks the execution flow to be worker-driven; ensure workers are running and RabbitMQ routing keys/exchange names are consistent when deploying.